# asterisk-dongle-ng

./: .gitignore  Makefile  Makefile.am  README.md  chan_dongle_ng.c  configure.ac
m4/: asterisk.m4
